src/objects/Pipeline_Snapshot__c.object
<CustomObject>
    <description>Used to store historic pipeline information for pipeline reporting. Automatically populated each month.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Opportunity_Snapshots</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Amount_Minus_Expense_Income__c</fullName>
        <label>Amount Minus Expense Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <inlineHelpText>Amount at the time of the snapshot.

For Opportuity:  Amount = Opp Amount
For Closed Contract: Amount = Total Amount of Contract
For Outstanding Contract: Total Amount Remaining</inlineHelpText>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Billing_Deficit__c</fullName>
        <label>Billing Deficit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Billing_efficiency__c</fullName>
        <label>Billing efficiency %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Buffer_EV__c</fullName>
        <formula>Expected_Buffer__c * (Amount_Minus_Expense_Income__c * Probability__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Buffer EV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Buffer_EV_for_Period__c</fullName>
        <label>Buffer EV for Period</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Buffer_at_GS_BD_Handover__c</fullName>
        <formula>Contract__r.Buffer_at_GS_BD_Handover__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Buffer % at GS-BD Handover</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CloseDate__c</fullName>
        <label>Opportunity Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CommCare__c</fullName>
        <formula>IF(CONTAINS( Products__c , &apos;CommCare&apos;),&apos;TRUE&apos;,&apos;FALSE&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CommCare</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CommConnect__c</fullName>
        <formula>IF(CONTAINS( Products__c , &apos;CommConnect&apos;),&apos;TRUE&apos;,&apos;FALSE&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CommConnect</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CommTrack__c</fullName>
        <formula>IF(CONTAINS( Products__c , &apos;CommTrack&apos;),&apos;TRUE&apos;,&apos;FALSE&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CommTrack</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Duration__c</fullName>
        <formula>MONTH( Contract_End_Date__c ) + (12 * YEAR(Contract_End_Date__c))  - MONTH( Contract_Start_Date__c ) - (12*YEAR(Contract_Start_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Contract End Date - Contract Start Date</inlineHelpText>
        <label>Contract Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contract_End_Date__c</fullName>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Execution_Date__c</fullName>
        <label>Contract Execution Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Expense_Income__c</fullName>
        <label>Contract Expense Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contract_Start_Date__c</fullName>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Total_Non_Expense_Income_BUDGET__c</fullName>
        <label>Contract Total Non Expense Income BUDGET</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contract_Total_Non_Expense_Income_Rmg__c</fullName>
        <label>Contract Total Non Expense Income Rmg</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>DContract__c</referenceTo>
        <relationshipLabel>Pipeline Snapshots</relationshipLabel>
        <relationshipName>Pipeline_Snapshots</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Current_18_Month_Cash_EV__c</fullName>
        <formula>if ( ISPICKVAL(Source_Type__c, &apos;Opportunity&apos;), Opportunity__r.X18_Month_Cash_EV__c , Contract__r.X18_Month_Cash_EV__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current 18 Month Cash (EV)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_24_Month_Cash_EV__c</fullName>
        <formula>if ( ISPICKVAL(Source_Type__c, &apos;Opportunity&apos;), Opportunity__r.X24_Month_Cash_EV__c , Contract__r.X24_Month_Cash_EV__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current 24 Month Cash (EV)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_3Month_Cash_EV__c</fullName>
        <formula>if ( ISPICKVAL(Source_Type__c, &apos;Opportunity&apos;),  Opportunity__r.Three_Month_EV__c ,  Contract__r.Three_Month_EV__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current 3Month Cash EV</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Amount__c</fullName>
        <formula>IF( ISPICKVAL(Source_Type__c,&apos;Contract&apos;), IF( ISPICKVAL(Stage__c, &apos;Closed&apos;),  Contract__r.Total_Amount_of_Contract__c ,  Contract__r.Total_Amount_REMAINING__c ),  Opportunity__r.Amount )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Channel__c</fullName>
        <formula>IF(ISPICKVAL( Source_Type__c , &apos;Contract&apos;),  TEXT(Contract__r.Channel__c)  , TEXT(Opportunity__r.Channel_Response__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Channel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Close_Date__c</fullName>
        <formula>Opportunity__r.CloseDate</formula>
        <label>Current Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_Contract_End_Date__c</fullName>
        <formula>Contract__r.Contract_End_Date__c</formula>
        <label>Current Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_Contract_Start_Date__c</fullName>
        <formula>Contract__r.Contract_Start_Date__c</formula>
        <label>Current Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_Country__c</fullName>
        <formula>IF(ISPICKVAL( Source_Type__c , &apos;Contract&apos;),  Contract__r.Country_Text__c ,  Opportunity__r.Country_Text__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Duration__c</fullName>
        <formula>IF(ISPICKVAL( Source_Type__c , &apos;Contract&apos;),  Contract__r.Duration_months__c ,  Opportunity__r.Duration_months__c )</formula>
        <label>Current Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Execution_Date__c</fullName>
        <formula>Contract__r.Date_of_Contract_Execution__c</formula>
        <label>Current Execution Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_Execution_Owner_BU__c</fullName>
        <description>For contract - shows the Execution Owner (BU). For opportunity, shows the Execution Owner (BU).</description>
        <formula>IF(ISPICKVAL( Source_Type__c , &apos;Contract&apos;),    Contract__r.Prime_Contracting_Business_Unit__r.Name  ,   Opportunity__r.Implementing_Business_Unit__r.Name  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>For contract - shows the Execution Owner (BU). For opportunity, shows the Execution Owner (BU).</inlineHelpText>
        <label>Current Execution Owner (BU)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Expected_Value__c</fullName>
        <formula>if(ISPICKVAL( Source_Type__c , &apos;Opportunity&apos;),  Opportunity__r.Expected_Value__c ,  Contract__r.Total_Amount_REMAINING__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Expected Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Implementation_Type__c</fullName>
        <formula>IF(ISPICKVAL( Source_Type__c , &apos;Contract&apos;), TEXT(Contract__r.Implementation_Type__c) , TEXT(Opportunity__r.Implementation_Type__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Implementation Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Intracompany_Subcontract__c</fullName>
        <formula>TEXT( Contract__r.Intracompany_Sub_contract__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Intracompany Subcontract</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Owner_BU__c</fullName>
        <formula>IF(ISPICKVAL( Source_Type__c , &apos;Contract&apos;),   Contract__r.Contracting_Business_Unit__r.Name ,  Opportunity__r.Opportunity_Owning_Entity__r.Name )</formula>
        <label>Current Owner (BU)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Owner__c</fullName>
        <formula>if(ispickval(Source_Type__c,&apos;Opportunity&apos;),
 Opportunity__r.Owner.Alias,
  Contract__r.Owner:User.Alias )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Parent_Contract_Execution_Owner__c</fullName>
        <formula>Contract__r.Parent_Contract__r.Prime_Contracting_Business_Unit__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Parent Contract Execution Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Probability__c</fullName>
        <formula>IF(ISPICKVAL( Source_Type__c , &apos;Opportunity&apos;), Opportunity__r.Probability , 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Probability</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Current_Products__c</fullName>
        <formula>IF(ISPICKVAL( Source_Type__c , &apos;Contract&apos;),  Contract__r.Product_Text__c ,  Opportunity__r.Product_Text__c )</formula>
        <label>Current Products</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_RFP_Response__c</fullName>
        <formula>TEXT(Opportunity__r.Channel_Response__c)</formula>
        <label>Current RFP Response</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Stage__c</fullName>
        <formula>IF(ISPICKVAL( Source_Type__c , &apos;Contract&apos;), &apos;Closed&apos;,  TEXT(Opportunity__r.StageName ))</formula>
        <label>Current Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Twelve_Month_Cash_EV__c</fullName>
        <formula>if ( ISPICKVAL(Source_Type__c, &apos;Opportunity&apos;),  Opportunity__r.Twelve_Month_EV__c ,  Contract__r.Twelve_Month_EV__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current 12Month Cash EV</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Duration_months__c</fullName>
        <inlineHelpText>The Duration at the time the snapshot was taken.

Opps: entered on opportunity manually
Contracts: End Date - Start Date</inlineHelpText>
        <label>Duration (months)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expected_Buffer__c</fullName>
        <label>Expected % Buffer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Expected_Monthly_Recurring_Revenue_MRR__c</fullName>
        <formula>IF(OR(ISPICKVAL(Opportunity__r.Implementation_Type__c, &quot;Self Service&quot;), ISPICKVAL(Opportunity__r.Implementation_Type__c, &quot;Enterprise&quot;), ISPICKVAL(Opportunity__r.Implementation_Type__c, &quot;Managed Server&quot;)),
IF(OR(ISBLANK (Amount__c), ISBLANK(Duration_months__c)), NULL, Monthly_Recurring_Revenue_MRR__c * Probability__c), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expected Monthly Recurring Revenue (MRR)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expected_Value_Minus_Expense__c</fullName>
        <formula>Amount_Minus_Expense_Income__c * Probability__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expected Value Minus Expense</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expected_Value__c</fullName>
        <formula>Amount__c * Probability__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The Expected Value at the time the snapshot was taken. ( EV = Amount * Probability)</inlineHelpText>
        <label>Expected Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expense_Travel_Spend__c</fullName>
        <label>Expense &amp; Travel Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expense_Travel_Spend_for_Period__c</fullName>
        <label>Expense &amp; Travel Spend for Period</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Funder_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Funding Source</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Opportunity_Snapshots1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GS_Execution_Budget__c</fullName>
        <label>GS Project Services Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GS_Net_Income_for_Period__c</fullName>
        <label>GS Net Income for Period</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GS_Net_Income_for_Period_by_Handover__c</fullName>
        <label>GS Net Income for Period by Handover</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GS_Net_Income_to_Date_Handover__c</fullName>
        <label>GS Net Income to Date @ Handover</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GS_Net_Income_to_Date__c</fullName>
        <label>GS Net Income to Date</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GS_Project_Services_Budget_Handoff_Cp__c</fullName>
        <label>GS Project Services Budget @ Handoff</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GS_Project_Services_Budget_Handoff__c</fullName>
        <formula>Contract__r.GS_Project_Services_Budget_Handoff__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GS Project Services Budget @ Handoff</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GS_Revenue__c</fullName>
        <description>GS_Project_Services_Budget_Handoff_Cp__c * Work_Completed_for_Period__c</description>
        <formula>GS_Project_Services_Budget_Handoff_Cp__c * Work_Completed_for_Period__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>GS_Project_Services_Budget_Handoff_Cp__c * Work_Completed_for_Period__c</inlineHelpText>
        <label>GS Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GS_Services_Completed_Handover__c</fullName>
        <label>GS Services Completed @ Handover</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GS_Services_Completed__c</fullName>
        <label>GS Services Completed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GS_Services_Completed_for_Period__c</fullName>
        <label>GS Services Completed for Period</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GS_Services_Handover_Completed_for_Per__c</fullName>
        <label>GS Services (Handover) Completed for Per</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Intracompany_Sub_contract__c</fullName>
        <label>Intracompany Sub-contract</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Invoiced__c</fullName>
        <label>% Invoiced</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Month_Date__c</fullName>
        <inlineHelpText>The month of this snapshot.</inlineHelpText>
        <label>Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Monthly_Recurring_Revenue_MRR__c</fullName>
        <formula>IF(OR(ISPICKVAL(Opportunity__r.Implementation_Type__c, &quot;Self Service&quot;), ISPICKVAL(Opportunity__r.Implementation_Type__c, &quot;Enterprise&quot;), ISPICKVAL(Opportunity__r.Implementation_Type__c, &quot;Managed Server&quot;)),
IF(OR(ISBLANK(Amount__c), ISBLANK (Duration_months__c)), NULL, Amount__c / Duration_months__c), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Monthly Recurring Revenue (MRR)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_Amount_Minus_Expense_Income__c</fullName>
        <label>Opportunity Amount Minus Expense Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_Amount__c</fullName>
        <label>Opportunity Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_Duration__c</fullName>
        <inlineHelpText>The duration of the opportunity.</inlineHelpText>
        <label>Opportunity Duration</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Expense_Income__c</fullName>
        <label>Opportunity Expense Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <formula>Opportunity__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity_Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Opportunity_Snapshots</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Product__c</fullName>
        <formula>IF(CONTAINS( Products__c , &apos;Other (Product)&apos;),&apos;TRUE&apos;,&apos;FALSE&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Other (Product)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owning_Entity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Opportunity Owner (different from Execution Owner and Contract Owner)</inlineHelpText>
        <label>Owner (BU)</label>
        <referenceTo>Business_Unit__c</referenceTo>
        <relationshipLabel>Pipeline Snapshots</relationshipLabel>
        <relationshipName>Opportunity_Snapshots</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Probability__c</fullName>
        <inlineHelpText>The probability at the time the snapshot was taken.  (Contracts = 100%)</inlineHelpText>
        <label>Probability (%)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Product_Big_Three__c</fullName>
        <formula>If( CONTAINS(Products__c , &quot;CommCare&quot;), 
	&quot;CommCare&quot;, 
	if(CONTAINS(Products__c,&quot;CommConnect&quot;),
		&quot;CommConnect&quot;, 
		if(CONTAINS(Products__c,&quot;CommTrack&quot;), 
			&quot;CommTrack&quot;,
			&quot;Other&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product (Big Three)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Spend__c</fullName>
        <label>Product Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Spend_for_Period__c</fullName>
        <label>Product Spend for Period</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Products__c</fullName>
        <label>Products</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RFP_Response__c</fullName>
        <label>RFP Response</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Non-RFP</fullName>
                </value>
                <value>
                    <fullName>Prime-RFP</fullName>
                </value>
                <value>
                    <fullName>Sub-RFP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Services_Spend__c</fullName>
        <label>Services Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Services_Spend_for_Period__c</fullName>
        <label>Services Spend for Period</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Source_Type__c</fullName>
        <inlineHelpText>Did this come from a contract or an opportunity?</inlineHelpText>
        <label>Source Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Contract</fullName>
                </value>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Stage 1 - Connect</fullName>
                    <color>#0B6FCE</color>
                </value>
                <value>
                    <fullName>Stage 2 - Talking</fullName>
                    <color>#78C953</color>
                </value>
                <value>
                    <fullName>Stage 3 - Prospect</fullName>
                    <color>#E27001</color>
                </value>
                <value>
                    <fullName>Stage 4 - Proposal Development</fullName>
                    <color>#DDDDDD</color>
                </value>
                <value>
                    <fullName>Stage 5 - Submitted</fullName>
                    <color>#BBBBBB</color>
                </value>
                <value>
                    <fullName>Stage 6 - In Negotiations</fullName>
                    <color>#999999</color>
                </value>
                <value>
                    <fullName>Closed</fullName>
                    <color>#A845DC</color>
                </value>
                <value>
                    <fullName>Outstanding Contracted</fullName>
                    <color>#F3D904</color>
                </value>
                <value>
                    <fullName>Total</fullName>
                    <color>#A53711</color>
                </value>
                <value>
                    <fullName>Cash on Hand</fullName>
                    <color>#009900</color>
                </value>
                <value>
                    <fullName>Predicted pipeline</fullName>
                    <color>#0B6FCE</color>
                </value>
                <value>
                    <fullName>Core run rate</fullName>
                    <color>#FF0000</color>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submitted_this_month__c</fullName>
        <label>Submitted this month</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Three_Month_EV__c</fullName>
        <formula>if(ispickval(Source_Type__c,&apos;Opportunity&apos;), 
IF( (MONTH(CloseDate__c ) + 12*YEAR(CloseDate__c)) &gt; (Month( Month_Date__c ) + 12*YEAR( Month_Date__c ) + 3) 
|| (BLANKVALUE(Duration_months__c,0) = 0) 
|| (CloseDate__c &lt; Month_Date__c), 
0, 
if( (12*YEAR(Month_Date__c)+ MONTH(Month_Date__c) + 3) &gt; (12*YEAR(CloseDate__c)+MONTH(CloseDate__c)+Duration_months__c), 
Expected_Value__c, 
(Expected_Value__c / Duration_months__c) * (MONTH( Month_Date__c) + 12*YEAR( Month_Date__c ) + 3 - MONTH(CloseDate__c) - 12*YEAR(CloseDate__c)))), 


if( (month(Contract_End_Date__c)+12*year(Contract_End_Date__c)) &lt; (month(Month_Date__c)+12*Year(Month_Date__c) + 4), 
Amount__c, 
(3 * Amount__c) / 
(
  (month(Contract_End_Date__c) + 12*year(Contract_End_Date__c)) - (month(Month_Date__c) + 12*year(Month_Date__c)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The 3 Month projection for the 3 months following the date the snapshot was taken.</inlineHelpText>
        <label>3Month Cash (EV)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Amount_REMAINING__c</fullName>
        <inlineHelpText>Maps to Total Amount REMAINING on the contract object.</inlineHelpText>
        <label>Contract Amount REMAINING</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Calculated_Costs__c</fullName>
        <label>Total Calculated Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Calculated_Costs_for_Period__c</fullName>
        <label>Total Calculated Costs for Period</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Twelve_Month_Cash_EV__c</fullName>
        <formula>if(ispickval(Source_Type__c,&apos;Opportunity&apos;), 
IF( (MONTH(CloseDate__c ) + 12*YEAR(CloseDate__c)) &gt; (Month( Month_Date__c ) + 12*YEAR( Month_Date__c ) + 12) 
|| (BLANKVALUE(Duration_months__c,0) = 0) 
|| (CloseDate__c &lt; Month_Date__c), 
0, 
if( (12*YEAR(Month_Date__c)+ MONTH(Month_Date__c) + 12) &gt; (12*YEAR(CloseDate__c)+MONTH(CloseDate__c)+Duration_months__c), 
Expected_Value__c, 
(Expected_Value__c / Duration_months__c) * (MONTH( Month_Date__c) + 12*YEAR( Month_Date__c ) + 12 - MONTH(CloseDate__c) - 12*YEAR(CloseDate__c)))), 


if( (month(Contract_End_Date__c)+12*year(Contract_End_Date__c)) &lt; (month(Month_Date__c)+12*Year(Month_Date__c) + 13), 
Amount__c, 
(12 * Amount__c) / 
(
  (month(Contract_End_Date__c) + 12*year(Contract_End_Date__c)) - (month(Month_Date__c) + 12*year(Month_Date__c)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>12Month Cash (EV)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Work_Completed__c</fullName>
        <label>% of Work Completed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Work_Completed_for_Period__c</fullName>
        <label>% of Work Completed for Period</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>X12_Month_Cash_Minus_Expense_Income_EV__c</fullName>
        <formula>if(ispickval(Source_Type__c,&apos;Opportunity&apos;), 
IF( (MONTH(CloseDate__c ) + 12*YEAR(CloseDate__c)) &gt; (Month( Month_Date__c ) + 12*YEAR( Month_Date__c ) + 12) 
|| (BLANKVALUE(Duration_months__c,0) = 0) 
|| (CloseDate__c &lt; Month_Date__c), 
0, 
if( (12*YEAR(Month_Date__c)+ MONTH(Month_Date__c) + 12) &gt; (12*YEAR(CloseDate__c)+MONTH(CloseDate__c)+Duration_months__c),  Expected_Value_Minus_Expense__c , 
( Expected_Value_Minus_Expense__c  / Duration_months__c) * (MONTH( Month_Date__c) + 12*YEAR( Month_Date__c ) + 12 - MONTH(CloseDate__c) - 12*YEAR(CloseDate__c)))), 


if( (month(Contract_End_Date__c)+12*year(Contract_End_Date__c)) &lt; (month(Month_Date__c)+12*Year(Month_Date__c) + 13), 
 Amount_Minus_Expense_Income__c , 
(12 *  Amount_Minus_Expense_Income__c ) / 
( 
(month(Contract_End_Date__c) + 12*year(Contract_End_Date__c)) - (month(Month_Date__c) + 12*year(Month_Date__c)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>12 Month Cash Minus Expense Income (EV)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X18_Month_Cash_EV__c</fullName>
        <formula>if(ispickval(Source_Type__c,&apos;Opportunity&apos;), 
IF( (MONTH(CloseDate__c ) + 12*YEAR(CloseDate__c)) &gt; (Month( Month_Date__c ) + 12*YEAR( Month_Date__c ) + 18) 
|| (BLANKVALUE(Duration_months__c,0) = 0) 
|| (CloseDate__c &lt; Month_Date__c), 
0, 
if( (12*YEAR(Month_Date__c)+ MONTH(Month_Date__c) + 18) &gt; (12*YEAR(CloseDate__c)+MONTH(CloseDate__c)+Duration_months__c), 
Expected_Value__c, 
(Expected_Value__c / Duration_months__c) * (MONTH( Month_Date__c) + 12*YEAR( Month_Date__c ) + 18 - MONTH(CloseDate__c) - 12*YEAR(CloseDate__c)))), 


if( (month(Contract_End_Date__c)+12*year(Contract_End_Date__c)) &lt; (month(Month_Date__c)+12*Year(Month_Date__c) + 19), 
Amount__c, 
(18 * Amount__c) / 
( 
(month(Contract_End_Date__c) + 12*year(Contract_End_Date__c)) - (month(Month_Date__c) + 12*year(Month_Date__c)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>18 Month Cash (EV)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>